<resources>
    <string name="app_name">Space Colony</string>

    <string name="title_home">Space Colony</string>
    <string name="title_recruit">Recruit Crew</string>
    <string name="title_quarters">Quarters</string>
    <string name="title_simulator">Simulator</string>
    <string name="title_mission_control">Mission Control</string>
    <string name="title_mission">Mission</string>
    <string name="title_medbay">Medbay</string>
    <string name="title_statistics">Statistics</string>

    <string name="section_locations">LOCATIONS</string>
    <string name="section_specialization">SPECIALIZATION</string>
    <string name="section_preview">PREVIEW</string>

    <string name="label_crew">Crew</string>
    <string name="label_missions">Missions</string>
    <string name="label_success">Success</string>
    <string name="label_colony_overview">Colony Overview</string>

    <string name="hint_crew_name">Enter crew name</string>
    <string name="label_name">Name</string>

    <string name="btn_cancel">Cancel</string>
    <string name="btn_create">Create</string>
    <string name="btn_to_simulator">To Simulator</string>
    <string name="btn_to_mission">To Mission</string>
    <string name="btn_return">Return</string>
    <string name="btn_train">Train +1 XP</string>
    <string name="btn_launch">Launch Mission</string>
    <string name="btn_attack">Attack</string>
    <string name="btn_defend">Defend</string>
    <string name="btn_special">Special</string>
    <string name="btn_continue">Continue</string>
    <string name="btn_recover">Recover</string>

    <string name="empty_quarters">No crew in Quarters.</string>
    <string name="empty_simulator">No crew training.</string>
    <string name="empty_mission_control">No crew ready. Move from Quarters first.</string>
    <string name="empty_medbay">All crew operational.</string>

    <string name="tab_colony">Colony</string>
    <string name="tab_crew">Crew</string>

    <string name="section_specializations">SPECIALIZATIONS</string>

    <string name="back_arrow">←</string>
    <string name="plus">+</string>

    <string name="mission_log">MISSION LOG</string>
    <string name="mission_won">Mission Won!</string>
    <string name="mission_lost">Mission Lost</string>
    <string name="mission_won_desc">Survivors earn +2 XP.</string>
    <string name="mission_lost_desc">All crew sent to Medbay.</string>

    <string name="squad_size">Squad size</string>
    <string name="squad_2">2 crew</string>
    <string name="squad_3">3 crew</string>
</resources>
